# breakout-rs

./: Cargo.toml  rustfmt.toml
resources/levels/: two.lvl
resources/shaders/: sprite.fs  sprite.vs
src/: ball_object.rs  event_handler.rs  game.rs  game_level.rs  game_object.rs  main.rs  primitive.rs  resource_manager.rs  shader.rs  sprite_renderer.rs  texture.rs  window.rs
