[package]
name = "breakout-rs"
description = "A BreakOut Rust Game following LearnOpenGL Book"
license = "MIT"
repository = "https://github.com/oawad79/breakout-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
glow = "0.16.0"
bytemuck = "1.14.0"
nalgebra-glm = "0.20.0"
glutin = "0.31.2"
glutin-winit = "0.4.2"
winit = "0.29.10"
raw-window-handle = "0.5.0"
